--- a/src/app/components/shared/aside-account-user/account-user-button.component.css
+++ b/src/app/components/shared/aside-account-user/account-user-button.component.css
@@ -15,9 +15,31 @@ aside:hover {
 
 .logged-in {
   color: #0BB9F0;
-  transform: scale(1.31)
 }
 
 .logged-in:hover {
   background-color: rgba(32, 150, 243, 0.11);
 }
+
+.button-account_circle-logged{
+  transition: transform 1..11s ease-in, transform 3.33s ease-out;
+  transform: scale(1.51);
+  color: #0BB9F0
+}
+
+button-account_circle-logged:hover {
+  transition: transform 1..11s ease-in, transform 3.33s ease-out;
+  transform: scale(1.51);
+}
+
+.button-account_circle-loggout{
+  transition: transform 1..11s ease-in, transform 3.33s ease-out;
+  transform: scale(1.51);
+}
+
+.button-account_circle-loggout:hover{
+  transition: transform 1..11s ease-in, transform 3.33s ease-out;
+  transform: scale(1.51);
+  color: #0BB9F0
+}
+
