--- a/src/app/components/shared/aside-account-user/account-user-button.component.html
+++ b/src/app/components/shared/aside-account-user/account-user-button.component.html
@@ -8,14 +8,14 @@
         'logged-in': (isAuthenticated$ | async)
       }"
     >
-      <mat-icon>account_circle</mat-icon>
+      <mat-icon class="button-account_circle-logged">account_circle</mat-icon>
     </button>
   </ng-container>
 
   <!-- Button for login -->
   <ng-template #notLoggedIn>
     <button mat-icon-button routerLink="/auth/login">
-      <mat-icon>account_circle</mat-icon>
+      <mat-icon class="button-account_circle-loggout">account_circle</mat-icon>
     </button>
   </ng-template>
 </aside>
