--- a/src/app/components/shared/nav/nav.component.css
+++ b/src/app/components/shared/nav/nav.component.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: start;
+  justify-content: space-around;
   gap: 3.33rem;
   width: 100%;
 }
@@ -57,16 +57,21 @@
   margin-left: 3.3rem;
 }
 
+
 .nav-actions {
   display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   flex-grow: 0.111;
+    gap: 3.33rem;
 }
 
 .search-bar-large {
   color: #fff;
   flex-grow: 7.7;
+    gap: 3.33rem;
+
 }
 
 .admin-add-item {
@@ -96,7 +101,19 @@
   background-color: grey;
 }
 
-@media (max-width: 1144px) {
+@media (max-width: 1336px) {
+  .nav-actions {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 0;
+      adding: 0;
+
+  }
+}
+
+  @media (max-width: 1144px) {
   mat-toolbar {
     margin: 0 !important;
   }
@@ -117,7 +134,7 @@
   }
 
   .nav-actions {
-    padding: 0;
+    flex-grow: 0.111;
   }
 
   .menu {
