--- a/src/app/modules/auth/components/register/register.component.css
+++ b/src/app/modules/auth/components/register/register.component.css
@@ -1,4 +1,5 @@
-.login-container {
+.register-container {
+  height: 100vh !important;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -6,7 +7,7 @@
   background: linear-gradient(to right, #e0eafc, #cfdef3);
 }
 
-.login-card {
+.register-card {
   background-color: rgba(255, 255, 255, 0.9);
   padding: 3.03rem;
   border-radius: 0.77rem;
@@ -40,7 +41,7 @@
   }
 }
 
-.login-button {
+.register-button {
   width: 100%;
   padding: 1.11rem;
   background-color: #0BB9F0;
@@ -50,7 +51,7 @@
   cursor: pointer;
 }
 
-.login-button:hover {
+.register-button:hover {
   background-color: #2196F3;
 }
 
@@ -60,7 +61,7 @@
   margin-top: 0.44rem;
 }
 
-.login-card h2 {
+.register-card h2 {
   margin-bottom: 1.11rem;
   font-size: 1.77rem;
 }
@@ -96,13 +97,13 @@
 }
 
 @media screen and (max-width: 768px) {
-  .login-card {
+  .register-card {
     width: 77%;
   }
 }
 
 @media screen and (max-width: 202px) {
-  .login-card {
+  .register-card {
     width: 89%;
   }
 }
