--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -6,7 +6,7 @@
         <input
           formControlName="username"
           type="text"
-          placeholder="Nom de l'utilisateur"
+          placeholder="Username de l'utilisateur"
         />
         <div
           *ngIf="username?.invalid && (username?.dirty || username?.touched)"
@@ -14,6 +14,21 @@
         >
           <div *ngIf="username?.errors?.['required']">
             Le nom de l'utilisateur est requis.
+          </div>
+        </div>
+      </div>
+      <div class="input-field">
+        <input
+          formControlName="email"
+          type="text"
+          placeholder="Email de l'utilisateur"
+        />
+        <div
+          *ngIf="email?.invalid && (username?.dirty || email?.touched)"
+          class="error"
+        >
+          <div *ngIf="email?.errors?.['required']">
+            L'email de l'utilisateur est requis.
           </div>
         </div>
       </div>
@@ -30,8 +45,12 @@
           <div *ngIf="password?.errors?.['required']">
             Mot de passe est requis.
           </div>
+          <div *ngIf="password?.errors?.['minlength']">
+            Le mot de passe doit avoir au moins 8 caractères.
+          </div>
         </div>
       </div>
+
       <button type="submit" class="login-button" [disabled]="loginForm.invalid">
         Identifiez-vous
       </button>
