--- a/src/app/pages/user-account/profile-user-page/profile-user-page.component.html
+++ b/src/app/pages/user-account/profile-user-page/profile-user-page.component.html
@@ -1,4 +1,5 @@
 <mat-card class="mat-elevation-z8 container">
+  <h2>{{ user?.username }}, bienvenue dans votre compte utilisateur !</h2>
   <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
     <mat-card-content>
       <!-- First Name -->
@@ -79,6 +80,40 @@
       <!-- Shipping Address -->
       <div formGroupName="shippingAddress" *ngIf="isCustomer">
         <div><strong>Shipping Address</strong></div>
+        <!-- Street -->
+        <mat-form-field>
+          <mat-label>Street</mat-label>
+          <input matInput formControlName="street" />
+        </mat-form-field>
+
+        <!-- City -->
+        <mat-form-field>
+          <mat-label>City</mat-label>
+          <input matInput formControlName="city" />
+        </mat-form-field>
+
+        <!-- State -->
+        <mat-form-field>
+          <mat-label>State</mat-label>
+          <input matInput formControlName="state" />
+        </mat-form-field>
+
+        <!-- Postal Code -->
+        <mat-form-field>
+          <mat-label>Postal Code</mat-label>
+          <input matInput formControlName="postalCode" />
+        </mat-form-field>
+
+        <!-- Country -->
+        <mat-form-field>
+          <mat-label>Country</mat-label>
+          <input matInput formControlName="country" />
+        </mat-form-field>
+      </div>
+
+      <!-- Billing Address -->
+      <div formGroupName="billingAddress" *ngIf="isCustomer">
+        <div><strong>Billing Address</strong></div>
         <!-- Street -->
         <mat-form-field>
           <mat-label>Street</mat-label>
