--- a/src/app/pages/not-found/not-found-page.component.css
+++ b/src/app/pages/not-found/not-found-page.component.css
@@ -11,6 +11,7 @@ body, html {
 }
 
 .center {
+  margin-top: 14rem;
   height: 100vh !important;
   text-align: center;
 }
@@ -39,7 +40,7 @@ body, html {
 .illustration:after {
   content: '';
   width: 100%;
-  height: 100vh !important;
+  height: auto;
   position: absolute;
   left: 0;
   top: 0;
@@ -52,7 +53,7 @@ body, html {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100vh !important;
+  height: auto;
   background: #f3f3f3;
   border-radius: 50%;
   transform: scale(0.84);
