improved styles for being more and more responsive

--- a/src/app/components/shared/aside-account-user/account-user-button.component.css
+++ b/src/app/components/shared/aside-account-user/account-user-button.component.css
@@ -19,6 +19,8 @@ aside:hover {
 
 .logged-in:hover {
   background-color: rgba(32, 150, 243, 0.11);
+  transition: transform 1..11s ease-in, transform 3.33s ease-out;
+  transform: scale(1.51);
 }
 
 .button-account_circle-logged{
@@ -27,19 +29,21 @@ aside:hover {
   color: #0BB9F0
 }
 
-button-account_circle-logged:hover {
+.button-account_circle-logged:hover{
   transition: transform 1..11s ease-in, transform 3.33s ease-out;
   transform: scale(1.51);
+  color: #0BB9F0
 }
 
 .button-account_circle-loggout{
+  color: #C5E1FC;
   transition: transform 1..11s ease-in, transform 3.33s ease-out;
   transform: scale(1.51);
 }
 
 .button-account_circle-loggout:hover{
+  color: #0BB9F0;
   transition: transform 1..11s ease-in, transform 3.33s ease-out;
   transform: scale(1.51);
-  color: #0BB9F0
 }
 
