--- a/src/app/pages/user-account/profile-user-page/profile-user-page.component.css
+++ b/src/app/pages/user-account/profile-user-page/profile-user-page.component.css
@@ -66,7 +66,12 @@
   flex: 1;
 }
 
-@media (max-width: 888px) {
+.reset-profil-form {
+  color: white;
+  background-color: #e2004b;
+}
+
+@media (max-width: 777px) {
   .container {
     padding: 1.11rem;
   }
