--- a/src/app/pages/user-account/profile-user-page/profile-user-page.component.html
+++ b/src/app/pages/user-account/profile-user-page/profile-user-page.component.html
@@ -2,37 +2,9 @@
   <h2>{{ user?.username }}, bienvenue dans votre compte utilisateur !</h2>
   <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
     <mat-card-content>
-      <!-- First Name -->
-      <mat-form-field>
-        <mat-label>First Name</mat-label>
-        <input matInput formControlName="firstname" />
-        <mat-error
-          *ngIf="
-            userForm.get('firstname')?.invalid &&
-            userForm.get('firstname')?.touched
-          "
-        >
-          First name is required.
-        </mat-error>
-      </mat-form-field>
-
-      <!-- Last Name -->
-      <mat-form-field>
-        <mat-label>Last Name</mat-label>
-        <input matInput formControlName="lastname" />
-        <mat-error
-          *ngIf="
-            userForm.get('lastname')?.invalid &&
-            userForm.get('lastname')?.touched
-          "
-        >
-          Last name is required.
-        </mat-error>
-      </mat-form-field>
-
       <!-- Username -->
       <mat-form-field>
-        <mat-label>Username</mat-label>
+        <mat-label>Pseudo</mat-label>
         <input matInput formControlName="username" />
         <mat-error
           *ngIf="
@@ -40,7 +12,35 @@
             userForm.get('username')?.touched
           "
         >
-          Username is required.
+          Le pseudo est requis.
+        </mat-error>
+      </mat-form-field>
+
+      <!-- First Name -->
+      <mat-form-field>
+        <mat-label>Prénom</mat-label>
+        <input matInput formControlName="firstname" />
+        <mat-error
+          *ngIf="
+            userForm.get('firstname')?.invalid &&
+            userForm.get('firstname')?.touched
+          "
+        >
+          Le prénom est requis.
+        </mat-error>
+      </mat-form-field>
+
+      <!-- Last Name -->
+      <mat-form-field>
+        <mat-label>Nom</mat-label>
+        <input matInput formControlName="lastname" />
+        <mat-error
+          *ngIf="
+            userForm.get('lastname')?.invalid &&
+            userForm.get('lastname')?.touched
+          "
+        >
+          Le nom est requis.
         </mat-error>
       </mat-form-field>
 
@@ -53,7 +53,7 @@
             userForm.get('email')?.invalid && userForm.get('email')?.touched
           "
         >
-          A valid email is required.
+          Une adresse mail est requise.
         </mat-error>
       </mat-form-field>
 
@@ -61,86 +61,50 @@
       <mat-form-field>
         <mat-label>Password</mat-label>
         <input matInput type="password" formControlName="password" />
-        <mat-error
-          *ngIf="
-            userForm.get('password')?.invalid &&
-            userForm.get('password')?.touched
-          "
-        >
-          Password is required.
+        <mat-error *ngIf="userForm.get('password')?.hasError('required')">
+          Le mot de passe est requis.
+        </mat-error>
+        <mat-error *ngIf="userForm.get('password')?.hasError('minlength')">
+          Le mot de passe doit comporter au moins 8 caractères.
         </mat-error>
       </mat-form-field>
 
       <!-- Phone Number -->
       <mat-form-field *ngIf="isCustomer">
-        <mat-label>Phone Number</mat-label>
+        <mat-label>Numéro de téléphone</mat-label>
         <input matInput formControlName="phoneNumber" />
       </mat-form-field>
 
-      <!-- Shipping Address -->
-      <div formGroupName="shippingAddress" *ngIf="isCustomer">
-        <div><strong>Shipping Address</strong></div>
-        <!-- Street -->
-        <mat-form-field>
-          <mat-label>Street</mat-label>
-          <input matInput formControlName="street" />
-        </mat-form-field>
-
-        <!-- City -->
-        <mat-form-field>
-          <mat-label>City</mat-label>
-          <input matInput formControlName="city" />
-        </mat-form-field>
-
-        <!-- State -->
-        <mat-form-field>
-          <mat-label>State</mat-label>
-          <input matInput formControlName="state" />
-        </mat-form-field>
-
-        <!-- Postal Code -->
-        <mat-form-field>
-          <mat-label>Postal Code</mat-label>
-          <input matInput formControlName="postalCode" />
-        </mat-form-field>
-
-        <!-- Country -->
-        <mat-form-field>
-          <mat-label>Country</mat-label>
-          <input matInput formControlName="country" />
-        </mat-form-field>
-      </div>
-
       <!-- Billing Address -->
       <div formGroupName="billingAddress" *ngIf="isCustomer">
-        <div><strong>Billing Address</strong></div>
+        <div><strong>Adresse de facturation</strong></div>
         <!-- Street -->
         <mat-form-field>
-          <mat-label>Street</mat-label>
+          <mat-label>Rue</mat-label>
           <input matInput formControlName="street" />
         </mat-form-field>
 
         <!-- City -->
         <mat-form-field>
-          <mat-label>City</mat-label>
+          <mat-label>Ville</mat-label>
           <input matInput formControlName="city" />
         </mat-form-field>
 
         <!-- State -->
         <mat-form-field>
-          <mat-label>State</mat-label>
+          <mat-label>Région</mat-label>
           <input matInput formControlName="state" />
         </mat-form-field>
 
         <!-- Postal Code -->
         <mat-form-field>
-          <mat-label>Postal Code</mat-label>
+          <mat-label>Code postal</mat-label>
           <input matInput formControlName="postalCode" />
         </mat-form-field>
 
         <!-- Country -->
         <mat-form-field>
-          <mat-label>Country</mat-label>
+          <mat-label>Pays</mat-label>
           <input matInput formControlName="country" />
         </mat-form-field>
       </div>
@@ -156,9 +120,9 @@
         type="submit"
         [disabled]="userForm.invalid"
       >
-        Submit
+        Valider
       </button>
-      <button mat-raised-button color="warn" (click)="onReset()">
+      <button mat-raised-button class="reset-profil-form" (click)="onReset()">
         Réinitialiser
       </button>
     </mat-card-actions>
