--- a/src/app/pages/release/release-latest/release-latest-page.component.css
+++ b/src/app/pages/release/release-latest/release-latest-page.component.css
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   grid-gap: 1.11rem;
