implemented end point for address management

--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -42,7 +42,7 @@
             Mot de passe est requis.
           </div>
           <div *ngIf="password?.errors?.['minlength']">
-            Le mot de passe doit avoir au moins 8 caractères.
+            Le mot de passe doit comporter au moins 8 caractères.
           </div>
         </div>
       </div>
