--- a/src/app/modules/auth/components/login/login.component.css
+++ b/src/app/modules/auth/components/login/login.component.css
@@ -3,6 +3,7 @@
   position: relative;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background: linear-gradient(to right, #e0eafc, #cfdef3);
