--- a/src/app/modules/auth/components/register/register.component.css
+++ b/src/app/modules/auth/components/register/register.component.css
@@ -1,8 +1,10 @@
 .register-container {
   position:relative;
   height: 100vh !important;
+  top: 4.4rem;
+  height: calc(100% - 4.4rem);
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background: linear-gradient(to right, #e0eafc, #cfdef3);
@@ -10,18 +12,37 @@
 
 .register-card {
   background-color: rgba(255, 255, 255, 0.9);
-  padding: 3.03rem;
+  padding: 0.89rem;
   border-radius: 0.77rem;
   box-shadow: 0 0.33rem 6px rgba(0, 0, 0, 0.1);
   text-align: center;
-  width: 77.7%;
+  width: 27rem;
   max-width: 1001px;
 }
 
-.input-field {
-  margin: 1.31rem 0;
-  flex: 1;
+.account-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+.input-field {
+  margin: 0.89rem 0;
+  flex: 1;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 44%;
+}
+
+.input-error {
+  width: 100%;
+  text-align: center;
+  color: #e2004b;
+}
+
 
 .input-field input {
   width: 100%;
@@ -32,7 +53,7 @@
 
 .account-info, .personal-info {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 1.11rem;
 }
 
@@ -43,7 +64,7 @@
 }
 
 .register-button {
-  width: 100%;
+  width: 66%;
   padding: 1.11rem;
   background-color: #0BB9F0;
   color: white;
@@ -100,20 +121,17 @@
 
 @media screen and (max-width: 777px) {
   .register-container {
-    height: auto !important;
+    height: 100vh !important;
     position: relative;
-    top: 9.8rem;
-    height: calc(100% - 9.3rem);
+    top: 11.1rem;
+    height: calc(100% - 11.1rem);
   }
 
   .input-field {
-    margin: 0.111rem 0;
+    margin: 0.44rem 0;
   }
-
   .account-info, .personal-info, .address-grid {
-    display: flex;
-    flex-direction: column;
-    gap: 0.44rem;
+    gap: 0;
   }
 
   .register-card {
