--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -7,7 +7,9 @@
         <div class="input-field">
           <input formControlName="username" type="text" placeholder="Pseudo" />
           <div *ngIf="username.errors && username.touched">
-            <div *ngIf="username.errors['required']">Le pseudo est requis.</div>
+            <div class="input-error" *ngIf="username.errors['required']">
+              Le pseudo est requis.
+            </div>
           </div>
         </div>
 
@@ -18,7 +20,7 @@
             placeholder="Adresse e-mail"
           />
           <div *ngIf="email.errors && email.touched">
-            <div *ngIf="email.errors['required']">
+            <div class="input-error" *ngIf="email.errors['required']">
               L'adresse e-mail est requise.
             </div>
             <div *ngIf="email.errors['email']">
@@ -34,10 +36,10 @@
             placeholder="Mot de passe"
           />
           <div *ngIf="password.errors && password.touched">
-            <div *ngIf="password.errors['required']">
+            <div class="input-error" *ngIf="password.errors['required']">
               Le mot de passe est requis.
             </div>
-            <div *ngIf="password.errors['minlength']">
+            <div class="input-error" *ngIf="password.errors['minlength']">
               Le mot de passe doit comporter au moins 8 caractères.
             </div>
           </div>
@@ -46,7 +48,7 @@
         <div class="input-field">
           <input formControlName="firstname" type="text" placeholder="Prénom" />
           <div *ngIf="firstname.errors && firstname.touched">
-            <div *ngIf="firstname.errors['required']">
+            <div class="input-error" *ngIf="firstname.errors['required']">
               Le prénom est requis.
             </div>
           </div>
@@ -55,7 +57,9 @@
         <div class="input-field">
           <input formControlName="lastname" type="text" placeholder="Nom" />
           <div *ngIf="lastname.errors && lastname.touched">
-            <div *ngIf="lastname.errors['required']">Le Nom est requis.</div>
+            <div class="input-error" *ngIf="lastname.errors['required']">
+              Le Nom est requis.
+            </div>
           </div>
         </div>
       </div>
