--- a/src/app/pages/user-account/profile-user-page/profile-user-page.component.html
+++ b/src/app/pages/user-account/profile-user-page/profile-user-page.component.html
@@ -70,14 +70,12 @@
       </mat-form-field>
 
       <!-- Address -->
-      <mat-form-field>
-        <mat-label>Adresses</mat-label>
-        <select>
-          <option *ngFor="let address of addresses" [value]="address.id">
-            {{ address.title ?? address.city }}
-          </option>
-        </select>
-      </mat-form-field>
+      <h3>Vos adresses enregistrées</h3>
+      <select>
+        <option *ngFor="let address of addresses" [value]="address.id">
+          {{ address.title ?? address.city }}
+        </option>
+      </select>
       <button (click)="goToAddressForm()"><mat-icon>add</mat-icon></button>
     </mat-card-content>
 
