--- a/src/app/components/shared/address/address.component.html
+++ b/src/app/components/shared/address/address.component.html
@@ -46,7 +46,7 @@
     >
       Valider
     </button>
-    <button mat-raised-button class="reset-profil-form" (click)="onReset()">
+    <button mat-raised-button class="eset-address-form" (click)="onReset()">
       Réinitialiser
     </button>
   </mat-card-actions>
