--- a/src/app/pages/user-account/profile-user-page/profile-user-page.component.css
+++ b/src/app/pages/user-account/profile-user-page/profile-user-page.component.css
@@ -1,84 +1,117 @@
 .container {
-  height: 100vh !important;
   position: relative;
-  margin-top: 7rem;
-  padding: 2.2rem;
+  top: 7.7rem;
+  height: calc(100% - 7.7rem);
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  background-color: #ffffff;
+  justify-content: center;
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
 }
 
-.form-group {
-  width: 100%;
-  margin-bottom: 1rem;
+.mat-form-field {
+  width: 77.7%;
+  margin-bottom: 1.11rem;
 }
 
-.form-group label {
+.mat-form-field label {
   display: block;
   font-weight: 600;
-  margin-bottom: 0.5rem;
 }
 
-.form-group input,
-.form-group select {
+.mat-form-field input,
+.mat-form-field select {
   width: 100%;
-  padding: 0.5rem;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 1rem;
+  border-radius: 7.7rem;
+  font-size: 1.11rem;
 }
 
-.form-group textarea {
+.mat-form-field  {
   width: 100%;
   min-height: 100px;
-  padding: 0.5rem;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 1rem;
+  border-radius: 7.7rem;
+  font-size: 1.11rem;
 }
 
-.submit-btn {
-  padding: 0.6rem 1.2rem;
-  background-color: 0BB9F0;
-  color: #ffffff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 1rem;
-  margin-top: 1rem;
+.mat-card-actions button {
+  padding: 0.77rem 1.4rem;
+  font-size: 1.11rem;
+  margin: 1.11rem;
 }
-
-.submit-btn:hover {
-  color: #2196F3;
-  background-color: rgba(32, 150, 243, 0.11);}
 
 .address-group {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
 }
 
-.address-group .form-group {
-  flex: 1;
-}
-
-.reset-profil-form {
+.goBack-button {
   color: white;
   background-color: #e2004b;
 }
 
+.goBack-button:hover {
+  color: white;
+  background-color: #e2004b;
+}
+
+.validate-button {
+  color: white;
+  background-color: #0BB9F0;
+}
+
+.validate-button:hover {
+  color: white;
+  background-color: #2196F3;
+}
+
+.reset-profil-form {
+  color: white;
+  background-color: #FF4080;
+}
+
+.reset-profil-form:hover {
+  color: white;
+  background-color: #e2004b;
+}
+
+.add-address {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 2rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  color: #0BB9F0;
+}
+
+.add-address:hover {
+  color: #FF4080;
+  background-color: rgba(255, 64, 127, 0.11);
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 2rem 0;
+}
+
+table th,
+table td {
+  border: 1px solid #ccc;
+  padding: 0.7rem;
+  text-align: left;
+}
+
 @media (max-width: 777px) {
   .container {
-    padding: 1.11rem;
+    padding: 2rem;
   }
 
-  .address-group .form-group {
+  .address-group .mat-form-field {
     flex: none;
     width: 100%;
   }
