--- a/src/app/pages/user-account/profile-user-page/profile-user-page.component.html
+++ b/src/app/pages/user-account/profile-user-page/profile-user-page.component.html
@@ -1,5 +1,7 @@
 <mat-card class="mat-elevation-z8 container">
-  <h2>{{ user?.username }}, bienvenue dans votre compte utilisateur !</h2>
+  <h2 style="color: #0bb9f0">
+    {{ user?.username }}, bienvenue dans votre compte utilisateur !
+  </h2>
   <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
     <mat-card-content>
       <!-- Username -->
@@ -69,31 +71,98 @@
         </mat-error>
       </mat-form-field>
 
-      <!-- Address -->
-      <h3>Vos adresses enregistrées</h3>
-      <select>
-        <option *ngFor="let address of addresses" [value]="address.id">
-          {{ address.title ?? address.city }}
-        </option>
-      </select>
-      <button (click)="goToAddressForm()"><mat-icon>add</mat-icon></button>
+      <mat-card-actions>
+        <button mat-raised-button class="goBack-button" (click)="goBack()">
+          Retour
+        </button>
+        <button
+          mat-raised-button
+          type="submit"
+          class="validate-button"
+          [disabled]="userForm.invalid"
+        >
+          Valider
+        </button>
+        <button mat-raised-button class="reset-profil-form" (click)="onReset()">
+          Réinitialiser
+        </button>
+      </mat-card-actions>
     </mat-card-content>
-
-    <mat-card-actions class="button-row">
-      <button mat-raised-button color="accent" (click)="goBack()">
-        Retour
-      </button>
-      <button
-        mat-raised-button
-        color="primary"
-        type="submit"
-        [disabled]="userForm.invalid"
-      >
-        Valider
-      </button>
-      <button mat-raised-button class="reset-profil-form" (click)="onReset()">
-        Réinitialiser
-      </button>
-    </mat-card-actions>
   </form>
+
+  <!-- Address -->
+  <span
+    style="
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+    "
+  >
+    <h3>Vos adresses enregistrées</h3>
+    <button class="add-address" (click)="goToAddressForm()">
+      <mat-icon>add</mat-icon>
+    </button>
+  </span>
+  <select
+    #addressSelectRef
+    (change)="displayAddressDetails(+addressSelectRef.value)"
+  >
+    <option [disabled]="true" [selected]="true">
+      Veuillez sélectioner une adresse
+    </option>
+    <option *ngFor="let address of addresses" [value]="address.id">
+      {{ address.title ?? address.city }}
+    </option>
+  </select>
+  <table *ngIf="selectedAddress" mat-table [dataSource]="[selectedAddress]">
+    <!-- Titre Column -->
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef>Titre</th>
+      <td mat-cell *matCellDef="let address">{{ address.title }}</td>
+    </ng-container>
+
+    <!-- Rue Column -->
+    <ng-container matColumnDef="street">
+      <th mat-header-cell *matHeaderCellDef>Rue</th>
+      <td mat-cell *matCellDef="let address">{{ address.street }}</td>
+    </ng-container>
+
+    <!-- Ville Column -->
+    <ng-container matColumnDef="city">
+      <th mat-header-cell *matHeaderCellDef>Ville</th>
+      <td mat-cell *matCellDef="let address">{{ address.city }}</td>
+    </ng-container>
+
+    <!-- State Column -->
+    <ng-container matColumnDef="state">
+      <th mat-header-cell *matHeaderCellDef>État</th>
+      <td mat-cell *matCellDef="let address">{{ address.state }}</td>
+    </ng-container>
+
+    <!-- Code postal Column -->
+    <ng-container matColumnDef="zipCode">
+      <th mat-header-cell *matHeaderCellDef>Code postal</th>
+      <td mat-cell *matCellDef="let address">{{ address.zipCode }}</td>
+    </ng-container>
+
+    <!-- Pays Column -->
+    <ng-container matColumnDef="country">
+      <th mat-header-cell *matHeaderCellDef>Pays</th>
+      <td mat-cell *matCellDef="let address">{{ address.country }}</td>
+    </ng-container>
+
+    <!-- ID de l'utilisateur Column -->
+    <ng-container matColumnDef="userId">
+      <th mat-header-cell *matHeaderCellDef>ID de l'utilisateur</th>
+      <td mat-cell *matCellDef="let address">{{ address.userId }}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+  <h3 *ngIf="addresses.length < 1">
+    Veuillez ajouter une adresse à votre profil !
+  </h3>
+  <h3 *ngIf="!selectedAddress">Veuillez sélectionner une adresse !</h3>
 </mat-card>
