--- a/src/app/components/shared/address/address.component.css
+++ b/src/app/components/shared/address/address.component.css
@@ -36,9 +36,34 @@
   color: #e2004b;
 }
 
+.goBack-button {
+  color: white;
+  background-color: #FF4080;
+}
+
+.goBack-button:hover {
+  color: white;
+  background-color: #e2004b;
+}
+
+.validate-button {
+  color: white;
+  background-color: #0BB9F0;
+}
+
+.validate-button:hover {
+  color: white;
+  background-color: #2196F3;
+}
+
 .reset-address-form {
   color: white;
   background-color: #e2004b;
+}
+
+.reset-address-form:hover {
+  color: white;
+  background-color: red;
 }
 
 @media screen and (max-width: 777px) {
