--- a/src/app/components/shared/address/address.component.html
+++ b/src/app/components/shared/address/address.component.html
@@ -35,18 +35,22 @@
     </div>
   </div>
   <mat-card-actions class="button-row">
-    <button mat-raised-button color="accent" (click)="goBackToPreviousPage()">
+    <button
+      mat-raised-button
+      class="goBack-button"
+      (click)="goBackToPreviousPage()"
+    >
       Retour
     </button>
     <button
       mat-raised-button
-      color="primary"
+      class="validate-button"
       type="submit"
       [disabled]="addressForm.invalid"
     >
       Valider
     </button>
-    <button mat-raised-button class="eset-address-form" (click)="onReset()">
+    <button mat-raised-button class="reset-address-form" (click)="onReset()">
       Réinitialiser
     </button>
   </mat-card-actions>
