--- a/src/app/pages/user-account/profile-user-page/profile-user-page.component.html
+++ b/src/app/pages/user-account/profile-user-page/profile-user-page.component.html
@@ -1,94 +1,93 @@
-<mat-card class="mat-elevation-z8 container">
-  <h2 style="color: #0bb9f0">
-    {{ user?.username }}, bienvenue dans votre compte utilisateur !
-  </h2>
-  <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
-    <mat-card-content>
-      <!-- Username -->
-      <mat-form-field>
-        <mat-label>Pseudo</mat-label>
-        <input matInput formControlName="username" />
-        <mat-error
-          *ngIf="
-            userForm.get('username')?.invalid &&
-            userForm.get('username')?.touched
-          "
-        >
-          Le pseudo est requis.
-        </mat-error>
-      </mat-form-field>
+<div class="profile-container">
+  <div class="profile-card">
+    <h2 style="color: #0bb9f0">
+      {{ user?.username }}, bienvenue dans votre compte utilisateur !
+    </h2>
+    <!-- Account User Form -->
+    <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+      <div class="account-info">
+        <div class="input-field">
+          <input formControlName="username" type="text" placeholder="Pseudo" />
+          <div *ngIf="username.errors && username.touched">
+            <div class="input-error" *ngIf="username.errors['required']">
+              Le pseudo est requis.
+            </div>
+          </div>
+        </div>
 
-      <!-- First Name -->
-      <mat-form-field>
-        <mat-label>Prénom</mat-label>
-        <input matInput formControlName="firstname" />
-        <mat-error
-          *ngIf="
-            userForm.get('firstname')?.invalid &&
-            userForm.get('firstname')?.touched
-          "
-        >
-          Le prénom est requis.
-        </mat-error>
-      </mat-form-field>
+        <div class="input-field">
+          <input
+            formControlName="email"
+            type="email"
+            placeholder="Adresse e-mail"
+          />
+          <div *ngIf="email.errors && email.touched">
+            <div class="input-error" *ngIf="email.errors['required']">
+              L'adresse e-mail est requise.
+            </div>
+            <div *ngIf="email.errors['email']">
+              L'adresse e-mail n'est pas valide.
+            </div>
+          </div>
+        </div>
 
-      <!-- Last Name -->
-      <mat-form-field>
-        <mat-label>Nom</mat-label>
-        <input matInput formControlName="lastname" />
-        <mat-error
-          *ngIf="
-            userForm.get('lastname')?.invalid &&
-            userForm.get('lastname')?.touched
-          "
-        >
-          Le nom est requis.
-        </mat-error>
-      </mat-form-field>
+        <div class="input-field">
+          <input
+            formControlName="password"
+            type="password"
+            placeholder="Mot de passe"
+          />
+          <div *ngIf="password.errors && password.touched">
+            <div class="input-error" *ngIf="password.errors['required']">
+              Le mot de passe est requis.
+            </div>
+            <div class="input-error" *ngIf="password.errors['minlength']">
+              Le mot de passe doit comporter au moins 8 caractères.
+            </div>
+          </div>
+        </div>
 
-      <!-- Email -->
-      <mat-form-field>
-        <mat-label>Email</mat-label>
-        <input matInput formControlName="email" />
-        <mat-error
-          *ngIf="
-            userForm.get('email')?.invalid && userForm.get('email')?.touched
-          "
-        >
-          Une adresse mail est requise.
-        </mat-error>
-      </mat-form-field>
+        <div class="input-field">
+          <input formControlName="firstname" type="text" placeholder="Prénom" />
+          <div *ngIf="firstname.errors && firstname.touched">
+            <div class="input-error" *ngIf="firstname.errors['required']">
+              Le prénom est requis.
+            </div>
+          </div>
+        </div>
 
-      <!-- Password -->
-      <mat-form-field>
-        <mat-label>Password</mat-label>
-        <input matInput type="password" formControlName="password" />
-        <mat-error *ngIf="userForm.get('password')?.hasError('required')">
-          Le mot de passe est requis.
-        </mat-error>
-        <mat-error *ngIf="userForm.get('password')?.hasError('minlength')">
-          Le mot de passe doit comporter au moins 8 caractères.
-        </mat-error>
-      </mat-form-field>
+        <div class="input-field">
+          <input formControlName="lastname" type="text" placeholder="Nom" />
+          <div *ngIf="lastname.errors && lastname.touched">
+            <div class="input-error" *ngIf="lastname.errors['required']">
+              Le Nom est requis.
+            </div>
+          </div>
+        </div>
 
-      <mat-card-actions>
-        <button mat-raised-button class="goBack-button" (click)="goBack()">
-          Retour
-        </button>
-        <button
-          mat-raised-button
-          type="submit"
-          class="validate-button"
-          [disabled]="userForm.invalid"
-        >
-          Valider
-        </button>
-        <button mat-raised-button class="reset-profil-form" (click)="onReset()">
-          Réinitialiser
-        </button>
-      </mat-card-actions>
-    </mat-card-content>
-  </form>
+        <div>
+          <button mat-raised-button class="goBack-button" (click)="goBack()">
+            Retour
+          </button>
+          <button
+            mat-raised-button
+            type="submit"
+            class="validate-button"
+            [disabled]="userForm.invalid"
+          >
+            Valider
+          </button>
+          <button
+            mat-raised-button
+            class="reset-profil-form"
+            (click)="onReset()"
+          >
+            Réinitialiser
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
 
   <!-- Address -->
   <span
@@ -152,17 +151,10 @@
       <td mat-cell *matCellDef="let address">{{ address.country }}</td>
     </ng-container>
 
-    <!-- ID de l'utilisateur Column -->
-    <ng-container matColumnDef="userId">
-      <th mat-header-cell *matHeaderCellDef>ID de l'utilisateur</th>
-      <td mat-cell *matCellDef="let address">{{ address.userId }}</td>
-    </ng-container>
-
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
   <h3 *ngIf="addresses.length < 1">
     Veuillez ajouter une adresse à votre profil !
   </h3>
-  <h3 *ngIf="!selectedAddress">Veuillez sélectionner une adresse !</h3>
-</mat-card>
+</div>
