--- a/src/app/modules/auth/components/register/register.component.css
+++ b/src/app/modules/auth/components/register/register.component.css
@@ -20,12 +20,6 @@
   max-width: 1001px;
 }
 
-.account-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .input-field {
   margin: 0.89rem 0;
   flex: 1;
@@ -36,6 +30,15 @@
   justify-content: center;
   width: 44%;
 }
+
+.account-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1.11rem;
+}
+
 
 .input-error {
   width: 100%;
@@ -49,18 +52,6 @@
   padding: 0.89rem;
   border: 1px solid #ccc;
   border-radius: 0.77rem;
-}
-
-.account-info, .personal-info {
-  display: flex;
-  flex-direction: column;
-  gap: 1.11rem;
-}
-
-.address-grid {
-  display: flex;
-  flex-direction: row;
-  gap: 0.22rem;
 }
 
 .register-button {
